package cinema.entity;

public class GuestCustomer extends Customer {

    public GuestCustomer(String email) { super(email); }
    public GuestCustomer() {}
}